@@ -1,6 +1,10 @@
 
 CHANGELOG
 
+* 2015/07/27:
+
+    - Small fix to ignore a warning after a BeautifulSoup 4.4.0 update.
+
 * 2015/05/12:
 
     - Allow ignoring internal links.
